# libcint-rs

./: .gitignore  CHANGELOG  CHANGELOG.md  Cargo.toml  build.rs  clippy.toml  katex-header.html  readme.md  release-plz.toml  rustfmt.toml
.claude/: CLAUDE.md
.claude/rules/: agent-and-maintaince.md
.github/workflows/: clippy.yml  release-plz.yml  test-libcint-src.yml  test-libcint.yml
examples/h2o_rhf/: Cargo.toml  build.rs
examples/h2o_rhf/src/: main.rs
external_deps/: CMakeLists.txt
libcint/: Cargo.toml  build.rs  katex-header.html
libcint-src/: Cargo.toml  build.rs
libcint-src/external_deps/: CMakeLists.txt
libcint-src/src/: lib.rs
libcint-src/src/cecp/: nr_ecp.c  nr_ecp.h  nr_ecp_deriv.c
libcint-src/tests/: test_workable.rs
libcint/assets/: h2o_rhf.rs
libcint/examples/: h2o_rhf.rs
libcint/examples/h2o_rhf/: Cargo.toml  build.rs  rustfmt.toml
libcint/examples/h2o_rhf/src/: main.rs
libcint/scripts/: generate_cecp_header.py  generate_libcint_header.py  mol-build.ipynb  pyscf_c10h22_qzvp_gto.ipynb  pyscf_c10h22_qzvp_gto_complex.ipynb  pyscf_cross_integral.ipynb  pyscf_h2o_rhf.py  pyscf_h2o_tzvp.ipynb  pyscf_h2o_tzvp_grids.ipynb  pyscf_h2o_tzvp_row_major.ipynb  pyscf_sb2me4_pvtz.ipynb  pyscf_sb2me4_pvtz_gto.ipynb  pyscf_sb2me4_pvtz_gto_complex.ipynb  pyscf_sb2me4_tzvp.ipynb  pyscf_special_change.ipynb  pyscf_special_na_ecpso.ipynb
libcint/src/: cint.rs  cint_change.rs  cint_crafter.rs  cint_data.rs  cint_fill_col_major.rs  cint_fill_grids.rs  cint_fill_row_major.rs  cint_initialize.rs  cint_prop.rs  cint_result.rs  crafter.rs  error.rs  lib.rs  prelude.rs  test_mol.rs  util.rs
libcint/src/cecp/: nr_ecp.c
libcint/src/ffi/: cecp_ffi.rs  cecp_wrapper.rs  cint.rs  cint_ffi.rs  cint_wrapper.rs  mod.rs  wrapper_traits.rs
libcint/src/gto/: deriv0.rs  deriv_0.rs  deriv_1.rs  deriv_2.rs  deriv_3.rs  deriv_4.rs  deriv_ig.rs  deriv_ip.rs  deriv_ipig.rs  deriv_iprc.rs  deriv_util.rs  grid_ao_drv.rs  gto_crafter.rs  gto_notation.md  mod.rs  prelude_dev.rs
libcint/src/gto/deriv_impl/: deriv_0.rs  deriv_1.rs  deriv_2.rs  deriv_3.rs  deriv_4.rs  deriv_ig.rs  deriv_ip.rs  deriv_ipig.rs  deriv_ipipsp.rs  deriv_ipr.rs  deriv_iprc.rs  deriv_ipsp.rs  deriv_sp.rs  mod.rs
libcint/src/parse/: atom.rs  basis.rs  from_toml_docs.md  mod.rs  mol.rs  mole.rs  serde_build.rs
libcint/tests/: gto_c10h22_qzvp.rs  gto_sb2me4_pvtz.rs  intor_grids.rs  intor_h2o_tzvp.rs  intor_h2o_tzvp_row_major.rs  intor_sb2me4.rs  special_change.rs  special_na_ecpso.rs  test_mol_build.rs  test_mol_build_toml.rs  test_mool_build_serde_ai_agent_generated.rs  test_parse_mol.rs  test_parse_recover.rs  test_serde_build_mol.rs
scripts/: cint_funcs.h  generate_cecp_header.py  generate_libcint_header.py
src/: lib.rs
src/ffi/: cecp.rs  cecp_wrapper.rs  cint.rs  cint_wrapper.rs  mod.rs  wrapper.rs  wrapper_traits.rs
