[workspace]
resolver = "2"
members = [
    "libcint",
    "libcint-src",
]

[workspace.package]
version = "0.1.4"
edition = "2024"
repository = "https://github.com/ajz34/libcint-rs"
keywords = ["chemistry", "integral", "scientific"]
categories = ["science"]
license = "Apache-2.0"

[workspace.dependencies]
libcint = { path = "./libcint", version = "0.1.4" }
libcint-src = { path = "./libcint-src", version = "0.1.4" }

[profile.dev]
opt-level = 2
