[workspace]
resolver = "2"
members = [
    "libcint",
    "libcint-src",
]

[workspace.package]
version = "0.1.6"
edition = "2021"
rust-version = "1.88.0"
repository = "https://github.com/ajz34/libcint-rs"
keywords = ["chemistry", "integral", "scientific"]
categories = ["science"]
license = "Apache-2.0"

[workspace.dependencies]
libcint = { path = "./libcint", version = "0.1.6" }
libcint-src = { path = "./libcint-src", version = "0.1.6" }

[profile.dev]
opt-level = 2
