[workspace]
resolver = "2"
members = [
    "libcint",
    "libcint-src",
]

[workspace.package]
version = "0.2.2"
edition = "2021"
rust-version = "1.82.0"
repository = "https://github.com/ajz34/libcint-rs"
keywords = ["chemistry", "integral", "scientific"]
categories = ["science"]
license = "Apache-2.0"

[workspace.dependencies]
libcint = { path = "./libcint", version = "0.2.2" }
libcint-src = { path = "./libcint-src", version = "0.2.2" }

[profile.dev]
opt-level = 2
