[package]
name = "libcint-src"
description = "FFI binding and GTO wrapper for libcint"

version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[build-dependencies]
cmake = { version = "0.1" }
cc = { version = "1.0" }

[features]
with_f12 = []
with_4c1e = []
build_from_source = []
static = []
qcint = []
