[package]
name = "libcint-src"
description = "libcint (C library) source or build specification"
readme = "readme.md"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[build-dependencies]
cmake = { version = "0.1" }
cc = { version = "1.0" }

[features]
with_f12 = []
with_4c1e = []
build_from_source = []
static = []
qcint = []
