[package]
name = "libcint"
description = "FFI binding and GTO wrapper for libcint"

version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
libcint-src = { workspace = true }
itertools = "0.14"
rayon = "1.10"
num = "0.4"
libm = "0.2"
duplicate = "2.0"
derive_builder = "0.20"
rstsr-common = { version = "0.3.6", features = ["rayon"] }

[build-dependencies]
cc = "1.0"
cmake = "0.1"

[dev-dependencies]
ndarray = "0.15"
approx = "0.5"
rstest = "0.25"

[features]
with_f12 = ["libcint-src/with_f12"]
with_4c1e = ["libcint-src/with_4c1e"]
build_from_source = ["libcint-src/build_from_source"]
static = ["libcint-src/static"]
qcint = ["libcint-src/qcint"]

[profile.dev]
opt-level = 2

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]
