[package]
name = "libcint"
description = "FFI binding and GTO wrapper for libcint (C library)"
readme = "readme.md"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
libcint-src = { workspace = true }
itertools = { version = "0.14" }
rayon = { version = "1.10" }
num = { version = "0.4", features = ["std"] }
libm = { version = "0.2" }
duplicate = { version = "2.0"}
derive_builder = { version = "0.20"}
rstsr-common = { version = "0.6", features = ["rayon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
indexmap = { version = "2.14" }
bse = { version = "0.1", optional = true, default-features = false }
toml = { version = "0.8", optional = true }

[dev-dependencies]
approx = "0.5"
rstest = "0.25"
rstsr = { version = "0.7", features = ["linalg", "sci"] }

[features]
default = ["bse"]

dispatch_more_blksize = []
bse = ["dep:bse", "dep:toml"]

with_f12 = ["libcint-src/with_f12"]
with_4c1e = ["libcint-src/with_4c1e"]
build_from_source = ["libcint-src/build_from_source"]
static = ["libcint-src/static"]
qcint = ["libcint-src/qcint"]
no_linkage = ["libcint-src/no_linkage"]

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--cfg", "docsrs", "--document-private-items", "--html-in-header", "katex-header.html"]
